# F1DoGordo

./: .gitignore  CMakeLists.txt  INSTALL.md  NOTICE.md  README.md  RELEASE_NOTES.md
Docs/: 00-Home.md  01-Project-Overview.md  02-Build-And-Test.md  03-Architecture.md  04-Parameters-APVTS.md  05-DSP-Modules.md  06-UI-Cockpit-Design.md  07-Hardware-Mapping-Plan.md  08-Reverb-Issues-And-Future-Fix.md  09-Roadmap.md  10-Changelog.md
Docs/decisions/: 0001-Use-JUCE-CMake-VST3.md  0002-Delay-No-DryWet-Output-Analog.md  0003-Factory-Default-Neutral.md  0004-F1-Wheel-UI-And-Hardware-Mapping.md
Docs/modules/: Air-Exciter.md  Channel-EQ.md  Delay.md  FET-Compressor.md  Reverb.md
Installer/: F1DoGordo.iss  README-INSTALLER.md
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AirExciterModule.cpp  AirExciterModule.h  AudioModule.h  ChannelModule.cpp  ChannelModule.h  DelayModule.cpp  DelayModule.h  FETCompressorModule.cpp  FETCompressorModule.h  Metering.cpp  Metering.h  ReverbModule.cpp  ReverbModule.h
Source/UI/: F1Dashboard.cpp  F1Dashboard.h  F1Theme.cpp  F1Theme.h  F1TopBar.cpp  F1TopBar.h  GordoButton.cpp  GordoButton.h  GordoKnob.cpp  GordoKnob.h  GordoLED.cpp  GordoLED.h  GordoMeter.cpp  GordoMeter.h
